{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 7,
  "lineage": "e4fd0d22-8b0d-a503-da91-2628513d77b1",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_address",
      "name": "vm_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-19T06:30:32.291-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bell-lab/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/networks/myvpc",
            "priority": 1000,
            "project": "bell-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-19T06:30:32.943-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bell-lab/global/firewalls/web-app-firewall",
            "log_config": [],
            "name": "web-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/networks/myvpc",
            "priority": 1000,
            "project": "bell-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/firewalls/web-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230912",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bell-lab/zones/europe-west4-a/disks/web-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/bell-lab/zones/europe-west4-a/instances/web-vm",
            "instance_id": "1520565829209693311",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "T6JhyqQiZy8=",
            "name": "web-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.204.201.77",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/networks/myvpc",
                "network_ip": "10.1.20.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bell-lab/regions/europe-west4/subnetworks/mysubnet",
                "subnetwork_project": "bell-lab"
              }
            ],
            "project": "bell-lab",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bell-lab/zones/europe-west4-a/instances/web-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gcp",
              "terraform",
              "web"
            ],
            "tags_fingerprint": "e65M-LOQuFI=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "data.google_compute_address.vm_static_ip",
            "data.google_compute_image.my_image",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/bell-lab/global/networks/myvpc",
            "mtu": 1460,
            "name": "myvpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "bell-lab",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/networks/myvpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-19T06:30:35.417-07:00",
            "gateway_address": "10.1.20.1",
            "id": "projects/bell-lab/regions/europe-west4/subnetworks/mysubnet",
            "ip_cidr_range": "10.1.20.0/24",
            "name": "mysubnet",
            "network": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/networks/myvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "bell-lab",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bell-lab/regions/europe-west4/subnetworks/mysubnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}